--- a/index.html
+++ b/index.html
@@ -257,14 +257,15 @@
 							&times;
 						</span>
 						<span class="sr-only">
-							关于
+							关于程序员日
 						</span>
 					</button>
 					<h4 class="modal-title" id="myModalLabel">标题</h4>
 				</div>
 				<div class="modal-body">
-					 姓名：陈某某<br>电话：15602250188<br>邮箱：375237579@qq.com<br>
-                       时间：2017年10月24日（程序员日）
+					1024程序员节是中国程序员的共同节日。1024是2的十次方，二进制计数的基本计量单位之一。
+					程序员(英文Programmer)是从事程序开发、维护的专业人员。程序员就像是一个个1024，以最低调、踏实、
+					核心的功能模块搭建起这个科技世界。1G=1024M，而1G与1级谐音，也有一级棒的意思。
 				</div>
 				<div class="modal-footer">
 					<button type="button" class=" btn btn-default" data-dismiss="modal">关闭</button>
